Setup basic layout.

--- a/web/index.html
+++ b/web/index.html
@@ -5,10 +5,14 @@
   <title>ANIVIS</title>
   <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
   <link rel="stylesheet" href="css/style.css" type="text/css" />
-  <link href='https://fonts.googleapis.com/css?family=Syncopate' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Poiret+One|Bangers|Jura:500|Bubblegum+Sans' rel='stylesheet' type='text/css'>
 </head>
 <body>
-  <div id="main"></div>
+  <div id="main" class="page"></div>
+  <div>
+    <svg id="tree"></svg>
+    <svg id="ranking"></svg>
+  </div>
   <script src="js/scripts.min.js"></script>
 </body>
 </html>
