Tweak framework to use React to drive d3 vis.

--- a/web/index.html
+++ b/web/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
   <div id="main" class="page"></div>
-  <div>
+  <!-- <div>
     <svg id="tree"></svg>
     <svg id="ranking"></svg>
-  </div>
+  </div> -->
   <script src="js/scripts.min.js"></script>
 </body>
 </html>
